# training_logger

./: .env  Cargo.toml  README.md
sql/: data.sql  schema.sql  setup.sql
src/: db.rs  details.rs  main.rs  new.rs  response_util.rs  training_set_db.rs  users.rs  users_db.rs
static/css/: style.css
static/js/: delete_confirm.js  training_set_form.js
template/: training_logger.html
templates/: base.tera  detail.tera  edit.tera  index.tera  login.tera  new.html  new.tera  not_found.tera  register_user.tera  signup.tera  training_logger.html  training_logger.tera
templates/details/: detail.html  detail.tera  edit.html  edit.tera  training_set_detail.tera
