[package]
name = "training_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = {version =  "0.8.0", features = ["postgres", "runtime-tokio", "chrono"]}

tera = "1.20.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.217"}
actix-files = "0.6.6"
bcrypt = "0.17.0"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = [ "cookie-session" ] }
